force-app/main/default/objects/LabsActionPlans__APTask__c/fields/Action_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template__c</fullName>
    <formula>LabsActionPlans__Action_Plan__r.LabsActionPlans__Action_Plan_Template__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Plan Template</label>
    <type>Text</type>
</CustomField>