force-app/main/default/objects/LabsActionPlans__APTask__c/fields/LabsActionPlans__Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Action_Plan__c</fullName>
    <description>The parent Action Plan</description>
    <label>Action Plan</label>
    <referenceTo>LabsActionPlans__ActionPlan__c</referenceTo>
    <relationshipName>apTasks1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>