force-app/main/default/objects/LabsActionPlans__APTask__c/fields/LabsActionPlans__Controller__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Controller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The controlling task</description>
    <label>Controlling Task</label>
    <referenceTo>LabsActionPlans__APTask__c</referenceTo>
    <relationshipName>Dependent_AP_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>