force-app/main/default/objects/LabsActionPlans__APTask__c/fields/LabsActionPlans__DaysFromStart__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__DaysFromStart__c</fullName>
    <description>How many days from the plan start date or due date of the controlling task will this task be due?</description>
    <inlineHelpText>This value determines the due date of the task. For tasks with no dependency, the task&apos;s due date will be offset from the plan start date. For tasks with a dependency, the due date will be offset from the expected due date of the task on which it depends.</inlineHelpText>
    <label>Days After</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>