force-app/main/default/objects/LabsActionPlans__APTask__c/fields/LabsActionPlans__Dependent__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Dependent__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>The TaskIndex of the controlling task</description>
    <label>Dependent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>