force-app/main/default/objects/LabsActionPlans__APTask__c/fields/LabsActionPlans__IsClosed__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set via trigger. Used in Visualforce ActionPlanDetail page logic</description>
    <inlineHelpText>True if the task status is one of the closed statuses in this org</inlineHelpText>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>