force-app/main/default/objects/LabsActionPlans__APTask__c/fields/LabsActionPlans__Priority__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Priority__c</fullName>
    <description>Unrestricted picklist so can include any custom task priorities the customer may use.</description>
    <inlineHelpText>The default priority of the new task</inlineHelpText>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>