force-app/main/default/objects/LabsActionPlans__APTask__c/fields/LabsActionPlans__SendEmail__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__SendEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send Email Notification of Task creation.</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>