force-app/main/default/objects/LabsActionPlans__APTask__c/fields/LabsActionPlans__Status__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Status__c</fullName>
    <description>Task Status. Depends on Record Type, so is unrestricted picklist.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Waiting on someone else</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>