force-app/main/default/objects/LabsActionPlans__APTask__c/fields/LabsActionPlans__Task_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Task_RecordTypeId__c</fullName>
    <description>Formula for setting the Record Type of the created Task</description>
    <formula>LabsActionPlans__Action_Plan__r.LabsActionPlans__TaskRecordTypeID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tasks Record Type Id</label>
    <type>Text</type>
</CustomField>