force-app/main/default/objects/LabsActionPlans__APTask__c/fields/LabsActionPlans__TaskIndex__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__TaskIndex__c</fullName>
    <description>The order in which to display the AP Tasks on a page</description>
    <label>Task Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>