force-app/main/default/objects/LabsActionPlans__APTask__c/fields/LabsActionPlans__Time_Reminder__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Time_Reminder__c</fullName>
    <description>Formula to display what time the reminder will be shown. Currently not locale-dependent.</description>
    <formula>IF(LabsActionPlans__Reminder__c &amp;&amp; !ISBLANK(LabsActionPlans__Minutes_Reminder__c),
IF(MOD(FLOOR(VALUE(LabsActionPlans__Minutes_Reminder__c) / 60),12) == 0,&apos;12&apos;,TEXT(MOD(FLOOR(VALUE(LabsActionPlans__Minutes_Reminder__c) / 60),12))) &amp; &apos;:&apos; &amp; IF(MOD(VALUE(LabsActionPlans__Minutes_Reminder__c) ,60)==0,&apos;00&apos;,TEXT(MOD(VALUE(LabsActionPlans__Minutes_Reminder__c) ,60)))+&apos; &apos;+ IF( VALUE(LabsActionPlans__Minutes_Reminder__c)&gt;=720, &apos;PM&apos;,&apos;AM&apos;),

&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Reminder</label>
    <type>Text</type>
</CustomField>