force-app/main/default/objects/LabsActionPlans__APTask__c/fields/LabsActionPlans__Type__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Type__c</fullName>
    <description>Task Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>