force-app/main/default/objects/LabsActionPlans__APTask__c/validationRules/LabsActionPlans__DaysNotBlankNotNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>LabsActionPlans__DaysNotBlankNotNegative</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(LabsActionPlans__DaysFromStart__c) || LabsActionPlans__DaysFromStart__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>LabsActionPlans__DaysFromStart__c</errorDisplayField>
    <errorMessage>You must enter a non-negative value</errorMessage>
</ValidationRule>