force-app/main/default/objects/LabsActionPlans__APTask__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LabsActionPlans__Action_Plan__c</columns>
    <columns>LabsActionPlans__Subject__c</columns>
    <columns>Action_Plan_Template__c</columns>
    <columns>LabsActionPlans__User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LabsActionPlans__ActivityDate__c</columns>
    <columns>LabsActionPlans__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>